[gd_scene load_steps=77 format=3 uid="uid://cvkxhlxm487wu"]

[ext_resource type="Script" path="res://examples/top-down-example/slime_enemy.gd" id="1_3caxv"]
[ext_resource type="Texture2D" uid="uid://blytsupdkklau" path="res://examples/top-down-example/assets/slime.png" id="1_sgxsc"]
[ext_resource type="PackedScene" uid="uid://i5vecmyu3w12" path="res://addons/2d_essentials/survivability/health_component.tscn" id="3_e6x2o"]
[ext_resource type="PackedScene" uid="uid://cblap37dy8pb2" path="res://addons/2d_essentials/movement/velocity_component_2d.tscn" id="4_1ufgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ia6lq"]
atlas = ExtResource("1_sgxsc")
region = Rect2(0, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_adsx7"]
atlas = ExtResource("1_sgxsc")
region = Rect2(32, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpsqm"]
atlas = ExtResource("1_sgxsc")
region = Rect2(64, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_prcj2"]
atlas = ExtResource("1_sgxsc")
region = Rect2(96, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ungkn"]
atlas = ExtResource("1_sgxsc")
region = Rect2(128, 130, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_315ab"]
atlas = ExtResource("1_sgxsc")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alh0e"]
atlas = ExtResource("1_sgxsc")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb6ut"]
atlas = ExtResource("1_sgxsc")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ecsf"]
atlas = ExtResource("1_sgxsc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i0ri"]
atlas = ExtResource("1_sgxsc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46dja"]
atlas = ExtResource("1_sgxsc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdkcg"]
atlas = ExtResource("1_sgxsc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpp0b"]
atlas = ExtResource("1_sgxsc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spfr4"]
atlas = ExtResource("1_sgxsc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olsow"]
atlas = ExtResource("1_sgxsc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq340"]
atlas = ExtResource("1_sgxsc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g24wu"]
atlas = ExtResource("1_sgxsc")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6got"]
atlas = ExtResource("1_sgxsc")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xemw"]
atlas = ExtResource("1_sgxsc")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj5ly"]
atlas = ExtResource("1_sgxsc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8b1o"]
atlas = ExtResource("1_sgxsc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqxsk"]
atlas = ExtResource("1_sgxsc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwnl7"]
atlas = ExtResource("1_sgxsc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87wpb"]
atlas = ExtResource("1_sgxsc")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7kwf"]
atlas = ExtResource("1_sgxsc")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0o26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia6lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adsx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpsqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prcj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ungkn")
}],
"loop": true,
"name": &"died",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_315ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alh0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb6ut")
}],
"loop": true,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ecsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46dja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdkcg")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpp0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spfr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olsow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq340")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g24wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6got")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xemw")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj5ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8b1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqxsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwnl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87wpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7kwf")
}],
"loop": true,
"name": &"walk_right",
"speed": 6.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vunar"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3en33"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nu1ja"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vpbi1"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4aq6o"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hgwg1"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_keqym"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nu1ja")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_vpbi1")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_4aq6o")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_hgwg1")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kne6a"]
animation = &"jump_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jhwo2"]
animation = &"jump_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_awx82"]
animation = &"jump_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_by1mg"]
animation = &"jump_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hkfu7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kne6a")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_jhwo2")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_awx82")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_by1mg")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d83q6"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mwgeq"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8e0je"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bexsd"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8uwof"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d83q6")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mwgeq")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_8e0je")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_bexsd")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kbmc"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nsd2f"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xntwk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w74ky"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5cleh"]
advance_mode = 2
advance_condition = &"receive_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yevo4"]
advance_mode = 2
advance_condition = &"is_jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gkf5x"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njuwx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5wben"]
advance_mode = 2
advance_condition = &"receive_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lmfyo"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xwwhp"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_da8ke"]
advance_mode = 2
advance_condition = &"received_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h23wt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mhouo"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_eysly"]
states/Die/node = SubResource("AnimationNodeAnimation_vunar")
states/Die/position = Vector2(871, 99)
states/End/position = Vector2(1076, 99)
states/Hurt/node = SubResource("AnimationNodeAnimation_3en33")
states/Hurt/position = Vector2(697, 36)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_keqym")
states/Idle/position = Vector2(404, 127)
states/Jump/node = SubResource("AnimationNodeBlendSpace2D_hkfu7")
states/Jump/position = Vector2(412, 274)
states/Start/position = Vector2(93, 133)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_8uwof")
states/Walk/position = Vector2(634, 274)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_0kbmc"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_nsd2f"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_xntwk"), "Die", "End", SubResource("AnimationNodeStateMachineTransition_w74ky"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_5cleh"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_yevo4"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_gkf5x"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_njuwx"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_5wben"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_lmfyo"), "Hurt", "Walk", SubResource("AnimationNodeStateMachineTransition_xwwhp"), "Walk", "Hurt", SubResource("AnimationNodeStateMachineTransition_da8ke"), "Hurt", "Die", SubResource("AnimationNodeStateMachineTransition_h23wt"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_mhouo")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_a1r7r"]

[sub_resource type="Animation" id="Animation_l3yt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0kprv"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"died"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_rqhho"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jhf6d"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_evhrq"]
resource_name = "idle_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_su8p4"]
resource_name = "jump_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vcl5g"]
resource_name = "jump_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cridx"]
resource_name = "walk_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_33kug"]
resource_name = "walk_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xtous"]
_data = {
"RESET": SubResource("Animation_l3yt6"),
"die": SubResource("Animation_0kprv"),
"hurt": SubResource("Animation_rqhho"),
"idle_left": SubResource("Animation_jhf6d"),
"idle_right": SubResource("Animation_evhrq"),
"jump_left": SubResource("Animation_su8p4"),
"jump_right": SubResource("Animation_vcl5g"),
"walk_left": SubResource("Animation_cridx"),
"walk_right": SubResource("Animation_33kug")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_u0cl6"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_im7nx"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_76ay6"]
radius = 9.0

[node name="SlimeEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 10
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_3caxv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_j0o26")
animation = &"idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_eysly")
anim_player = NodePath("../AnimationPlayer")
process_callback = 0
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_a1r7r")
parameters/conditions/idle = false
parameters/conditions/is_jumping = false
parameters/conditions/is_walking = false
parameters/conditions/receive_damage = false
parameters/conditions/received_damage = false
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Jump/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xtous")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(1.07854, 1)
shape = SubResource("CircleShape2D_u0cl6")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_im7nx")
debug_color = Color(0.87451, 0.447059, 0.223529, 0.419608)

[node name="HealthComponent" parent="." instance=ExtResource("3_e6x2o")]
max_health = 20
current_health = 20

[node name="VelocityComponent2D" parent="." instance=ExtResource("4_1ufgy")]
max_speed = 75
acceleration_smoothing = 10.0

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
debug_enabled = true

[node name="ChaseTimer" type="Timer" parent="Navigation"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_76ay6")
debug_color = Color(0.843137, 0.156863, 0.0941176, 0.419608)

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="knockback_received" from="VelocityComponent2D" to="." method="_on_velocity_component_2d_knockback_received"]
[connection signal="timeout" from="Navigation/ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
